// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MemberItem /> should render with [canModify=true] 1`] = `
<MemberItem__StyledMemberItem>
  <MemberItemIcon
    identicon="6be6d0a72a16cb633144ec03cdaef77804c6f94770184f83e0899fe6bdcb77ee"
  />
  bob
  <FlexItem
    alignSelf={null}
    basis="auto"
    grow={1}
    shrink={1}
  >
    <Flex
      alignContent="stretch"
      alignItems="center"
      className="pull-right"
      direction="row"
      justifyContent="flex-start"
      wrap="nowrap"
    >
      <Icon
        bsStyle="warning"
        faStyle="fas"
        fixedWidth={false}
        name="edit"
        onClick={[Function]}
        pullRight={false}
        tip="Modify"
      />
      <FlexItem
        alignSelf={null}
        basis="auto"
        grow={0}
        pad={true}
        shrink={1}
      >
        <Icon
          bsStyle="danger"
          faStyle="fas"
          fixedWidth={false}
          name="trash"
          onClick={[Function]}
          pullRight={false}
          tip="Remove"
        />
      </FlexItem>
    </Flex>
  </FlexItem>
</MemberItem__StyledMemberItem>
`;

exports[`<MemberItem /> should render with identicon 1`] = `
<MemberItem__StyledMemberItem>
  <MemberItemIcon
    identicon="6be6d0a72a16cb633144ec03cdaef77804c6f94770184f83e0899fe6bdcb77ee"
  />
  bob
</MemberItem__StyledMemberItem>
`;

exports[`<MemberItem /> should render without identicon 1`] = `
<MemberItem__StyledMemberItem>
  <MemberItemIcon />
  bob
</MemberItem__StyledMemberItem>
`;
